--- a/src/styles/question.scss
+++ b/src/styles/question.scss
@@ -8,6 +8,19 @@
     margin-top: 8px;
   }
 
+  &.highlighted {
+    background: #f4f0ff;
+    border-top: 1px solid #835afd;
+
+    footer .user-info span {
+      color: #29292e;
+    }
+  }
+
+  &.answered {
+    background: #dbdcdd;
+  }
+
   p {
     color: #292929;
   }
@@ -17,6 +30,11 @@
     justify-content: space-between;
     align-items: center;
     margin-top: 24px;
+
+    > div:nth-child(2) {
+      display: flex;
+      gap: 16px;
+    }
   }
 
   .user-info {
